bug fix - detail results not showing in full height

--- a/app/assets/stylesheets/page/root.scss
+++ b/app/assets/stylesheets/page/root.scss
@@ -273,6 +273,7 @@ main {
       position: relative;
       overflow-y: auto;
       overflow-x: hidden;
+      flex-basis: 100%;
       > ul.toggleable-list {
         padding: 0;
         position: relative;
